primer commit para deployar el back

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ DB_USER=postgres
 DB_PASSWORD=12345
 DB_HOST=localhost
 SECRET="hpoalsmdoasla.oelasm.cklds,.x32edxjkmld,x."
+DB_DEPLOY=postgresql://postgres:KQnQWQItranjOLARDWCvXKwTTnYjyXEQ@roundhouse.proxy.rlwy.net:14195/railway
+PORT=1000
